tests/neg/erased-object.scala
// scalac: -language:experimental.erasedDefinitions

erased object Test // error
